bizinikiwi/pezframe/support/test/tests/pezpallet_ui/call_invalid_vis.stderr
error: Invalid pezpallet::call, dispatchable function must be public: `pub fn`
  --> tests/pezpallet_ui/call_invalid_vis.rs:37:3
   |
37 |         fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {
   |         ^^
